--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: goopg
 Section: python
 Priority: extra
 Maintainer: Leo Iannacone <l3on@ubuntu.com>
+Uploaders: David Steele <steele@debian.org>
 Build-Depends: debhelper (>= 9),
                dh-buildinfo,
                dh-python,
