--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,15 @@
 Source: goopg
 Section: mail
 Priority: extra
-Maintainer: Leo Iannacone <l3on@ubuntu.com>
-Uploaders: David Steele <steele@debian.org>
+Maintainer: David Steele <steele@debian.org>
 Build-Depends: debhelper (>= 9),
                dh-buildinfo,
                dh-python,
                python | python-all | python-dev | python-all-dev
 Standards-Version: 3.9.8
 Homepage: http://leoiannacone.github.io/goopg/
-Vcs-Git: https://github.com/LeoIannacone/goopg.git
-Vcs-Browser: https://github.com/LeoIannacone/goopg/
+Vcs-Git: https://github.com/davesteele/goopg.git -b debian
+Vcs-Browser: https://github.com/davesteele/goopg
 
 Package: goopg
 Architecture: all
