--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: goopg
 Section: mail
-Priority: extra
+Priority: optional
 Maintainer: David Steele <steele@debian.org>
 Uploaders: Leo Iannacone <l3on@ubuntu.com>
 Build-Depends: debhelper (>= 9),
