--- a/debian/control
+++ b/debian/control
@@ -6,21 +6,22 @@ Uploaders: Leo Iannacone <l3on@ubuntu.com>
 Build-Depends: debhelper (>= 9),
                dh-buildinfo,
                dh-python,
-               python | python-all | python-dev | python-all-dev
+               python3 | python3-all | python3-dev | python3-all-dev
 Testsuite: autopkgtest
 Standards-Version: 3.9.8
 Homepage: http://leoiannacone.github.io/goopg/
 Vcs-Git: https://github.com/davesteele/goopg.git -b debian
 Vcs-Browser: https://github.com/davesteele/goopg
+X-Python3-Version: >= 3.5
 
 Package: goopg
 Architecture: all
-Depends: python,
-         python-gflags,
-         python-gnupg,
-         python-googleapi,
-         python-oauth2client (>= 2.0.1-1),
-         python-xdg,
+Depends: python3:any,
+         python3-gflags,
+         python3-gnupg,
+         python3-googleapi,
+         python3-oauth2client (>= 2.0.1-1),
+         python3-xdg,
          gnupg-agent,
          gnupg2,
          ${misc:Depends}
