--- a/debian/control
+++ b/debian/control
@@ -6,20 +6,18 @@ Uploaders: Leo Iannacone <l3on@ubuntu.com>
 Build-Depends: debhelper (>= 9),
                dh-buildinfo,
                dh-python,
-               python3 | python3-all | python3-dev | python3-all-dev
-Standards-Version: 4.1.2
+               python | python-all | python-dev | python-all-dev
 Homepage: http://leoiannacone.github.io/goopg/
 Vcs-Git: https://github.com/davesteele/goopg.git -b debian
 Vcs-Browser: https://github.com/davesteele/goopg
-X-Python3-Version: >= 3.5
 
 Package: goopg
 Architecture: all
-Depends: python3-gflags,
-         python3-gnupg,
-         python3-googleapi,
-         python3-oauth2client (>= 2.0.1-1),
-         python3-xdg,
+Depends: python-gflags,
+         python-gnupg,
+         python-googleapi,
+         python-oauth2client (>= 2.0.1-1),
+         python-xdg,
          gnupg-agent,
          gpg (>= 2.1),
          ${misc:Depends},
